# Niriksha

./: .gitignore  README.md  run_full_checks.bat  run_full_checks.sh  test_det.py  test_detection_api.py
backend/: .env  app.py  pyproject.toml  requirements.txt  test_db.py  test_detection_modules_smoke.py
backend/database/: __init__.py  connection.py  schemas.py
backend/detection_modules/: __init__.py  cheating_score.py  eye_movement.py  face_detection.py  face_mesh.py  hand_detection.py  head_pose.py  multi_face.py  phone_detection.py  talking_detection.py
backend/middleware/: auth_middleware.py
backend/models/: result.py  user.py
backend/routes/: auth_routes.py  dashboard_routes.py  exam_routes.py
backend/services/: auth_service.py  exam_service.py  report_service.py
backend/utils/: auth.py  claude_client.py  face_utils.py  rate_limiter.py  screenshot.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: ProtectedRoute.jsx  Sidebar.jsx  ThemeToggle.jsx  ThemedToaster.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/hooks/: useBrowserMonitor.js  useWebSocket.js
frontend/src/pages/: AdminPage.jsx  DashboardPage.jsx  ExamPage.jsx  FaceVerifyPage.jsx  LandingPage.jsx  LoginPage.jsx  ResultPage.jsx  SignupPage.jsx
